--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Vite + React + TS</title>
+		<title>Romance Khánh - tạo mã chuyển khoản học phí</title>
 	</head>
 	<body>
 		<div id="root"></div>
